--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,8 @@ language: csharp
 solution: YourNameHere.sln
 before_deploy:
 - zip releases/YourNameHere.zip YourNameHere/bin/Release/*
-- apt-get install msitools
+- sudo apt-get -qq update
+- sudo apt-get install -y msitools
 - msi-packager YourNameHere/bin/Release releases/YourNameHere.msi -n=YourNameHere -v=1.1 -m=Bonny1992 -u=$guid.secure -i=YourNameHere/ynh-icon.ico -e=YourNameHere.exe -l
 deploy:
   provider: releases
