--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,9 @@ language: csharp
 solution: YourNameHere.sln
 before_deploy:
   - zip releases/YourNameHere.zip YourNameHere/bin/Release/*
-  - nvm install 0.10
-  - nvm use 0.10
-  - npm install --yes msi-packager
-  - node msi.js
+  - sudo apt-get -qq update
+  - sudo apt-get install -y nsis
+  - makensis installer.nsi
 deploy:
   provider: releases
   skip_cleanup: true
